[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = [
    "dycw-utilities[test]>=0.179.4, <1",
    "pyright>=1.1.408, <2",
    "rich>=14.2.0, <15",
  ]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = ["dycw-utilities>=0.179.4, <1"]
  description = "Template for Python packages"
  name = "dycw-template-python"
  readme = "README.md"
  requires-python = ">= 3.14"
  version = "0.1.0"
